--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI Pipeline with Unit, Integration, and Regression Tests
 
 on:
   push:
@@ -7,19 +7,26 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install pytest
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Run tests
-      run: pytest
+      - name: Run Unit Tests
+        run: pytest tests/test_unit.py --maxfail=1 --disable-warnings -q
+
+      - name: Run Integration Tests
+        run: pytest tests/test_integration.py --maxfail=1 --disable-warnings -q
+
+      - name: Run Regression Tests
+        run: pytest tests/test_regression.py --maxfail=1 --disable-warnings -q
