--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-
+          python -m pip install --upgrade pip python -m pip install -r requirements.txt
       - name: Run Unit Tests
         run: pytest tests/test_unit.py --maxfail=1 --disable-warnings -q
 
